방문자 기록기 코드 추가

--- a/index/testpage.html
+++ b/index/testpage.html
@@ -3,6 +3,16 @@
   <head>
     <title>하나님의 백성이 지켜야 할 성품</title>
     <meta charset="utf-8" />
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7QN3HPK5H5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7QN3HPK5H5');
+</script>
+    </head>
     <body>
       <h1><a href=http://bible.godpia.com/read/reading.asp?ver=easy&ver2=&vol=mat&chap=5&sec= title="성경 구절">마태복음 5장 1절-16절 말씀</a>(22.12.16)</h1>
       <h2><하나님의 백성이 지켜야 할 성품></h2>
@@ -31,7 +41,7 @@
         })();
     </script>
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-  </p><p>
+  </p><p> 
     <!--Start of Tawk.to Script-->
 <script type="text/javascript">
   var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
@@ -46,5 +56,4 @@
   </script>
   <!--End of Tawk.to Script-->
   </p></body>
-  </head>
 </html>
