--- a/index/testpage1.html
+++ b/index/testpage1.html
@@ -3,6 +3,16 @@
   <head>
     <title>하나님의 백성이 지켜야 할 성품</title>
     <meta charset="utf-8" />
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7QN3HPK5H5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7QN3HPK5H5');
+</script>
+    </head>
     <body>
       <h1>마태복음 5장 1절-16절 말씀(22.12.16)</h1>
       <h2><a href="testpage.html">하나님의 백성이 지켜야 할 성품</a></h2>
@@ -21,5 +31,5 @@
 <strong>선행하므로 구원받는 것이 아니라 구원받았기에 선행을 하는 것</strong>
 <br><strong>지금보다 더 희생하자</strong>(주는 자가 받는 자보다 복이 있나니)<br>
 </p>
-<p>예수 그리스도의 십자가인 복음을 전하자<br>착한 행실이 그릇이라면 복음이 그릇 안의 내용물</p></head>
+<p>예수 그리스도의 십자가인 복음을 전하자<br>착한 행실이 그릇이라면 복음이 그릇 안의 내용물</p>
 </body></html>
