--- a/index/testpage3.html
+++ b/index/testpage3.html
@@ -3,20 +3,15 @@
   <head>
     <title>하나님의 백성이 지켜야 할 성품</title>
     <meta charset="utf-8" />
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-7QN3HPK5H5"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7QN3HPK5H5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-      gtag("config", "G-7QN3HPK5H5");
-    </script>
+  gtag('config', 'G-7QN3HPK5H5');
+</script>
   </head>
   <body>
     <h1>>마태복음 5장 1절-16절 말씀(22.12.16)</h1>
